# hw_13

./: .gitignore  main.py  pyproject.toml  readme.md  test.py
migrations/versions/: 8bfac8952c78_init.py  eca7eb441fbb_add_reset.py
postgres-data/: postmaster.pid
postgres-data/base/13458/: pg_internal.init
postgres-data/base/16384/: pg_internal.init
postgres-data/base/16385/: 1247  1249  1259  16386  16389  16391  16393  16399  16400  16402  16404  16406  16410  16417  16418  16419  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  (+5 more)
postgres-data/global/: 1262  2671  2672  pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13458.stat  db_16384.stat  db_16385.stat  global.stat
src/database/: db.py
src/repository/: contacts.py  user.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  cloudinary.py  email.py
